blue-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappbluedeployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: javawebapp
      version: v1
      color: blue
  template:
    metadata:
      name: javawebapppod
      labels:
        app: javawebapp
        version: v1
        color: blue
    spec:
      containers:
        - name: javawebappcontainer
          image: adijaiswal/boardshack:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
...
