green-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappgreendeployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: javawebapp
      version: v2
      color: green
  template:
    metadata:
      name: javawebapppod
      labels:
        app: javawebapp
        version: v2
        color: green
    spec:
      containers:
        - name: javawebappcontainer
          image: ashokit/javawebapp
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
...
