live-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: javawebappblueservice
spec:
  type: NodePort
  selector:
    version: v1
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30785
...
