pre-prod-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: javewebappgreenservice
spec:
  type: NodePort
  selector:
    version: v2
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 31785
...
