green-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: app-ingress
 namespace: green
spec:
 rules:
 - host: portal.azure.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: javewebappgreenservice
           port:
             number: 80
